--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>Title goes here</title>
   </head>
   <body>
-    Page elements go here.
+    <h1>My Portfolio</hi>
+    <p>
+      My text here
+    </p>
   </body>
 </html>
