--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>My Portfolio</hi>
+    <img src="geog-4046-logo.png" alt="GEOG 4046 logo">
     <p>
       My text here
     </p>
