--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <h1>My Portfolio</hi>
     <img src="geog-4046-logo.png" alt="GEOG 4046 logo">
     <p>
-      My text here
+      <a href="#"></a>
     </p>
   </body>
 </html>
