--- a/index.html
+++ b/index.html
@@ -1,13 +1,40 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title goes here</title>
+    <meta charset="utf-8">
+    <title>Chris's Repository</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>My Portfolio</hi>
-    <img src="geog-4046-logo.png" alt="GEOG 4046 logo">
-    <p>
-      <a href="#"></a>
-    </p>
+    <div class="main">
+      <div id="header">
+      <h1>Chris's Website</hi>
+      <p>CT</p>
+      <img src="ct.jpg" alt="logo">
+    </div>
+      <hr>
+    </div>
+    <div class="portfolio">
+      <h1>Portfolio:</h1>
+      <div>
+        <div class="title">
+          <h3>Book Assignment  01</h3>
+        </div>
+        <a href="https://www.arcgis.com/apps/MapTour/index.html?appid=54f5666e0c424341a7807a3d909d5b40">City of New Orleans</a>
+        <p>A tour of the city of New Orleans, including the Superdome, the Smoothie King Center, and Tag Gormley Stadium</p>
+        <img src="New Orleans.jpg" alt="Screenshot of web app">
+      </div>
+      <hr>
+      <div>
+        <div class="title">
+          <h3>Book Assignment 02</h3>
+        </div>
+        <a href="http://www.arcgis.com/apps/View/index.html?appid=0f5819eb53414c2e84e1745b9c4a286a&extent=-207.8667,-18.0147,17.1333,69.9475">Top 50 US Cities by Population</a>
+        <p>Web App for Population</p>
+        <img src="Population.jpg" alt="Screenshot of Web App">
+      </div>
+
+    </div>
+
   </body>
 </html>
