--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <title>Chris's Repository</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body>
+
+<body>
+
+
     <div class="main">
       <div id="header">
       <h1>Chris's Website</hi>
@@ -35,6 +38,6 @@
       </div>
 
     </div>
-
-  </body>
+    <script src="code-assignment-03.js">
+    </body>
 </html>
