--- a/index.html
+++ b/index.html
@@ -36,8 +36,18 @@
         <p>Web App for Population</p>
         <img src="Population.jpg" alt="Screenshot of Web App">
       </div>
+    </div>
+    <div class="portfolio">
+      <h1>Portfolio:</h1>
+      <div>
+        <div class="title">
+          <h3>Book Assignment  03a</h3>
+        </div>
+        <a href="https://ctotaro.maps.arcgis.com/apps/GeoForm/index.html?appid=0df89b59087d4216a03b1c48bee5b964">311 Incident Report</a>
+        <p>Webpage to report incidents</p>
+        <img src="Incident Report.jpg" alt="Screenshot of incident report web app">
 
     </div>
-    <script src="code-assignment-03.js">
+    <script src="code-assignment-03.js"></script>
     </body>
 </html>
