--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <h3>Book Assignment  01</h3>
         </div>
         <a href="https://www.arcgis.com/apps/MapTour/index.html?appid=54f5666e0c424341a7807a3d909d5b40">City of New Orleans</a>
-        <p>A tour of the city of New Orleans, including the Superdome, the Smoothie King Center, and Tag Gormley Stadium</p>
+        <p>A stadium tour of the city of New Orleans, including the Superdome, the Smoothie King Center, and Tag Gormley Stadium</p>
         <img src="New Orleans.jpg" alt="Screenshot of web app">
       </div>
       <hr>
@@ -36,6 +36,7 @@
         <p>Web App for Population</p>
         <img src="Population.jpg" alt="Screenshot of Web App">
       </div>
+      <hr>
     </div>
       <div>
         <div class="title">
