--- a/index.html
+++ b/index.html
@@ -48,5 +48,6 @@
 
     </div>
     <script src="code-assignment-03.js"></script>
+    <script src="code-assignment-04.js"></script>
     </body>
 </html>
