Book Assignment 5 added

--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
         <p>Webpage to report incidents</p>
         <img src="Incident Report.jpg" alt="Screenshot of incident report web app">
 
+        <div class="title">
+          <h5>Book Assignment  05</h5>
+        </div>
+        <a href="https://ctotaro.maps.arcgis.com/apps/webappviewer/index.html?id=03e72a9c85b840249b7afbe1d11622d3">Groceries and Museums in East Baton Rouge!</a>
+        <p>Webpage for EBR groceries and museums</p>
+        <img src="Groceries and Museums in EBR.jpg" alt="Screenshot of groceries and museums web app">
+
     </div>
     <script src="code-assignment-03.js"></script>
     <script src="code-assignment-04.js"></script>
