index after code 5

--- a/index.html
+++ b/index.html
@@ -57,5 +57,7 @@
     </div>
     <script src="code-assignment-03.js"></script>
     <script src="code-assignment-04.js"></script>
+    <script src="code-assignment-05.js"></script>
+    
     </body>
 </html>
