--- a/index.html
+++ b/index.html
@@ -54,10 +54,20 @@
         <p>Webpage for EBR groceries and museums</p>
         <img src="Groceries and Museums in EBR.jpg" alt="Screenshot of groceries and museums web app">
 
+      </div>
+      <hr>
+      <div>
+
     </div>
-    <script src="code-assignment-03.js"></script>
-    <script src="code-assignment-04.js"></script>
-    <script src="code-assignment-05.js"></script>
-    
-    </body>
+    <script src="code-assignment-03.js">
+
+    </script>
+    <script src="code-assignment-04.js">
+
+    </script>
+    <script src="code-assignment-05.js">
+
+    </script>
+
+  </body>
 </html>
