Book assignment 2 changed

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <div class="title">
           <h3>Book Assignment 02</h3>
         </div>
-        <a href="http://www.arcgis.com/apps/View/index.html?appid=0f5819eb53414c2e84e1745b9c4a286a&extent=-207.8667,-18.0147,17.1333,69.9475">Top 50 US Cities by Population</a>
-        <p>Web App for Population</p>
-        <img src="Population.jpg" alt="Screenshot of Web App">
+        <a href="https://ctotaro.maps.arcgis.com/apps/View/index.html?appid=ad6e79bd899c4b0cae9f781a14b7f7d5">Significant Earthquakes</a>
+        <p>Web App for Earthquakes</p>
+        <img src="Earthquakes.jpg" alt="Screenshot of Web App">
       </div>
       <hr>
     </div>
