--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div id="header">
       <h1>Chris's Website</hi>
       <p>CT</p>
-      <img src="ct.jpg" alt="logo">
+      <img src="Astros.jpg" alt="logo">
     </div>
       <hr>
     </div>
