--- a/index.html
+++ b/index.html
@@ -54,13 +54,29 @@
         <p>Webpage for EBR groceries and museums</p>
         <img src="Groceries and Museums in EBR.jpg" alt="Screenshot of groceries and museums web app">
 
-        <hr>
-          <div class="title">
-            <h6>Book Assignment  06a</h6>
-          </div>
-          <a href="https://ctotaro.maps.arcgis.com/apps/View/index.html?appid=307fb0baa9774b88aad0515b6544e0ee">Earthquakes and Hurricanes</a>
-          <p>Webpage for Earthquakes and Hurricanes</p>
-          <img src="Earthquakes and Hurricanes.jpg" alt="Screenshot of earthquakes and hurricanes web app">
+      <hr>
+        <div class="title">
+          <h6>Book Assignment  06a</h6>
+        </div>
+        <a href="https://ctotaro.maps.arcgis.com/apps/View/index.html?appid=307fb0baa9774b88aad0515b6544e0ee">Earthquakes and Hurricanes</a>
+        <p>Webpage for Earthquakes and Hurricanes</p>
+        <img src="Earthquakes and Hurricanes.jpg" alt="Screenshot of earthquakes and hurricanes web app">
+
+      <hr>
+        <div class="title">
+          <h7>Midterm Project</h7>
+        </div>
+        <a href="https://arcg.is/1aHGrn">Map Viewer</a>
+        <p>Webpage for Map Viewer</p>
+        <img src="Viewer.jpg" alt="Map Viewer">
+
+      <hr>
+        <div class="title">
+          <h7>Midterm Project</h7>
+        </div>
+        <a href="https://arcg.is/vm99i">Map Analysis</a>
+        <p>Webpage for Map Analysis</p>
+        <img src="Analysis.jpg" alt="Map Analysis">
 
       </div>
       <hr>
