--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <div class="main">
       <div id="header">
       <h1>Chris's Website</hi>
-      <p>CT</p>
+      <p>Christopher Totaro</p>
       <img src="Astros.jpg" alt="logo">
-    </div>
+      </div>
       <hr>
     </div>
     <div class="portfolio">
-      <h1>Portfolio:</h1>
+      <h1>My Projects:</h1>
       <div>
         <div class="title">
           <h3>Book Assignment  01</h3>
