--- a/index.html
+++ b/index.html
@@ -93,5 +93,23 @@
 
     </script>
 
+    <script src="code-assignment-06a.js">
+
+    </script>
+
+    <script src="code-assignment-07a.js">
+
+    </script>
+
+    <script src="baseball.js">
+
+    </script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
+    </script>
+    <script>
+      $(document).ready(describeBaseball(mybaseball))
+    </script>
+
   </body>
 </html>
