--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
         <a href="https://arcg.is/vm99i">Map Analysis</a>
         <p>Webpage for Map Analysis</p>
         <img src="Analysis.jpg" alt="Map Analysis">
+      <hr>
+        <div class="title">
+          <h7>Book Assignment 9</h7>
+        </div>
+        <a href="https://www.arcgis.com/apps/Styler/index.html?appid=28e418a68de14a268a6ddc272084194e">US City Growth</a>
+        <p>Webpage for US City Growth</p>
+        <img src="City Growth.jpg" alt="City Growth">
 
       </div>
       <hr>
