--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </div>
         <a href="https://www.arcgis.com/apps/Styler/index.html?appid=66a22e98cc27439caf3e71044ecc2f06">US City Growth</a>
         <p>Webpage for US City Growth</p>
-        <img src="City Growth.jpg" alt="City Growth">
+        <img src="US City Growth.jpg" alt="US City Growth">
 
       </div>
       <hr>
