--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="title">
           <h3>Book Assignment  01</h3>
         </div>
-        <a href="https://www.arcgis.com/apps/MapTour/index.html?appid=54f5666e0c424341a7807a3d909d5b40">City of New Orleans</a>
+        <a href="https://www.arcgis.com/apps/Styler/index.html?appid=66a22e98cc27439caf3e71044ecc2f06">City of New Orleans</a>
         <p>A stadium tour of the city of New Orleans, including the Superdome, the Smoothie King Center, and Tag Gormley Stadium</p>
         <img src="New Orleans.jpg" alt="Screenshot of web app">
       </div>
