--- a/map/index.html
+++ b/map/index.html
@@ -16,5 +16,6 @@
     integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
     crossorigin=""></script>
     <script src="map.js"></script>
+    <script src="webmap-assignment-03.js"></script>
   </body>
 </html>
