--- a/map/index.html
+++ b/map/index.html
@@ -17,5 +17,6 @@
     crossorigin=""></script>
     <script src="map.js"></script>
     <script src="webmap-assignment-04.js"></script>
+    <script src="webmap-assignment-05.js"></script>
   </body>
 </html>
