--- a/index.html
+++ b/index.html
@@ -112,6 +112,19 @@
 
     </script>
 
+    <script src="script.js">
+    </script>
+
+    <script src="webmap-assignment-03.js">
+    </script>
+
+    <script src="webmap-assignment-04">
+    </script>
+
+    <script src="webmap-assignment-05">
+    </script>
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
     </script>
     <script>
